[minor] JAVAC_OPTIONS, JAVA_OPTIONS and --verbose
Fixes #31
Fixes #8