@@ -3,6 +3,7 @@ package dk.xam.jbang;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -13,6 +14,9 @@ class TestScript {
 	String example = "//#!/usr/bin/env jbang\n" + "\n"
 			+ "//DEPS com.offbytwo:docopt:0.6.0.20150202,log4j:log4j:1.2.14\n" + "\n" + "import org.docopt.Docopt;\n"
 			+ "import java.io.File;\n" + "import java.util.*;\n" + "import static java.lang.System.*;\n" + "\n"
+			+ "//JAVA_OPTIONS --enable-preview \"-Dvalue='this is space'\"\n"
+			+ "//JAVAC_OPTIONS --enable-preview\n"
+			+ "//JAVAC_OPTIONS --verbose \n"
 			+ "class classpath_example {\n" + "\n"
 			+ "\tString usage = \"jbang  - Enhanced scripting support for Java on *nix-based systems.\\n\" + \"\\n\" + \"Usage:\\n\"\n"
 			+ "\t\t\t+ \"    jbang ( -t | --text ) <version>\\n\"\n"
@@ -53,6 +57,17 @@ class TestScript {
 		assertTrue(deps.contains("blah"));
 
 		assertTrue(deps.contains("blue"));
+
+	}
+
+	@Test
+	void testExtractOptions() {
+
+		Script s = new Script(example);
+
+		assertEquals(s.collectCompileOptions(), Arrays.asList("--enable-preview", "--verbose"));
+
+		assertEquals(s.collectRuntimeOptions(), Arrays.asList("--enable-preview", "-Dvalue='this is space'"));
 
 	}
 
